# TastyLink_FastApi

./: .gitignore  docker-compose-db.yml  dockerfile  pyproject.toml
infra/: nginx.conf
src/: __init__.py  config.py  database.py  main.py
src/auth/: models.py  schemas.py
